improved proj structure - separated functions by files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,14 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 include_directories(include)
 
 set(SRC
-	src/main.c
+    src/main.c
     src/n_allocator.c
-	src/mem_chunk.c
-	src/mem_chunk_list.c
-	src/heap.c
+    src/mem_chunk.c
+    src/mem_chunk_list.c
+    src/heap.c
+    src/n_allocator_internal.c
+    src/n_reallocator.c
+    src/n_allocator_printer.c
 )
 
 if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_C_COMPILER_ID MATCHES "Clang")
